--- a/home.html
+++ b/home.html
@@ -1,1 +1,39 @@
-<h1>Testing!!! CHECK CHECK</h1>
+<!DOCTYPE HTML>
+<!--global settings/links-->
+<head>
+<script type="text/javascript" src="background.js"> </script>
+
+<link rel="stylesheet" type="text/css" href="CSS/style.css">
+
+</head>
+
+<body>
+	
+<!--content-->
+
+
+<!--video background segment -->	
+
+<div class="video-container">
+	<video muted autoplay loop width="1280" height="720">
+		<source src="video.mp4" type="video/mp4">
+	</video>
+</div>
+
+<div class="overlay">
+
+	<h1>Testing!!! CHECK CHECK</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
+</div>
+
+
+</body>
+
+</html>
