Clean 1, Added responsive navbar1

--- a/home.html
+++ b/home.html
@@ -1,40 +1,58 @@
 <!-- TEST COMMENT VERSION 1-->
 
 <!DOCTYPE HTML>
-<!--global settings/links-->
-<head>
-<script type="text/javascript" src="background.js"> </script>
-
-<link rel="stylesheet" type="text/css" href="CSS/style.css">
-
-</head>
-
-<body>
-	
-<!--content-->
+<html lang="en">
+	<head>
+		<meta name="chinese tutoring website" content="chinese mandarin taiwanese tutor tutoring teacher teaching learning class classes san&nbsp;diego sd">
+		<link rel="stylesheet"
+		  href="https://fonts.googleapis.com/css?family=Sansita+Swashed">
+		<link rel="stylesheet" type="text/css" href="CSS/style.css">
+		<title>Nancy Shi - Chinese/Mandarin Teacher</title>
+	</head>
 
 
-<!--video background segment -->	
+	<body>
+		<div>
+		<nav class = "navbar">
+			<div class = "brand-title"> Chinese Teacher</div>
+			<a href="#" class="toggle-button">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</a>
+			<div class = "navbar-links">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About Me</a></li>
+					<li><a href="#">Services</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+		</div>
 
-<div class="video-container">
-	<video muted autoplay loop width="1280" height="720">
-		<source src="video.mp4" type="video/mp4">
-	</video>
-</div>
+		
 
-<div class="overlay">
+<!--video background-->	
 
-	<h1>Testing!!! CHECK CHECK</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<div class="video-container">
+			<video muted autoplay loop width="1280" height="720">
+			<source src="video.mp4" type="video/mp4">
+			</video>
+		</div>
+<!-- Content, overlaid on video bg -->
+		<!-- 
+		<div class="overlay">
+			<h1>Nancy Shi - San Diego Chinese Teacher</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
-</div>
+		</div> -->
 
+<!-- <script type="text/javascript" src="background.js"> </script> -->
 
 </body>
 
