fixed viewport meta tag

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 <html lang="en">
 	<head>
 		<meta name="chinese tutoring website" content="chinese mandarin taiwanese tutor tutoring teacher teaching learning class classes san&nbsp;diego sd">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet"
 		  href="https://fonts.googleapis.com/css?family=Sansita+Swashed">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
