Added JS, Navbar1 Complete

--- a/home.html
+++ b/home.html
@@ -14,21 +14,21 @@
 
 	<body>
 		<div>
-		<nav class = "navbar">
-			<div class = "brand-title"> Chinese Teacher</div>
-			<a href="#" class="toggle-button">
-				<span class="bar"></span>
-				<span class="bar"></span>
-				<span class="bar"></span>
-			</a>
-			<div class = "navbar-links">
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About Me</a></li>
-					<li><a href="#">Services</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-		</div>
+			<nav class = "navbar">
+				<div class = "brand-title"> Chinese Teacher</div>
+				<a href="#" class="toggle-button">
+					<span class="bar"></span>
+					<span class="bar"></span>
+					<span class="bar"></span>
+				</a>
+				<div class = "navbar-links">
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">About Me</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</div>
 
 		
 
@@ -39,7 +39,7 @@
 			<source src="video.mp4" type="video/mp4">
 			</video>
 		</div>
-<!-- Content, overlaid on video bg -->
+<!-- Content overlay on video bg -->
 		<!-- 
 		<div class="overlay">
 			<h1>Nancy Shi - San Diego Chinese Teacher</h1>
@@ -53,7 +53,7 @@
 
 		</div> -->
 
-<!-- <script type="text/javascript" src="background.js"> </script> -->
+<script type="text/javascript" src="JS/script.js"></script>
 
 </body>
 
