Add buttons & main page intro

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 	<body>
 		<div>
 			<nav class = "navbar">
-				<div class = "brand-title"> Chinese Teacher</div>
+				<div class = "brand-title">SD Chinese Teacher</div>
 				<a href="#" class="toggle-button">
 					<span class="bar"></span>
 					<span class="bar"></span>
@@ -29,6 +29,7 @@
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
+		</div>
 
 		
 
@@ -39,19 +40,23 @@
 			<source src="video.mp4" type="video/mp4">
 			</video>
 		</div>
+
 <!-- Content overlay on video bg -->
-		<!-- 
+		
 		<div class="overlay">
-			<h1>Nancy Shi - San Diego Chinese Teacher</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-
-		</div> -->
+			<h2>Nancy Shi</h2>
+			<p>Hello and Welcome! You've come to the right place to learn Chinese.</p>
+		</div>
+		<div class="button-container">
+			<div class="landing-buttons">
+				<button class="button"><a href="#">About</a></button>
+				<button class="button"><a href="#">Services</a></button>
+				<button class="button"><a href="#">Contact</a></button>
+			</div>
+		</div>
+		<div class="foot-container">
+			<footer class="footer">&copy; 2021 Nancy Shi</footer>
+		</div>
 
 <script type="text/javascript" src="JS/script.js"></script>
 
