--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet"
 		  href="https://fonts.googleapis.com/css?family=Sansita+Swashed">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
-		<title>Nancy Shi - Chinese/Mandarin Teacher</title>
+		<title>Nancy Shi - Services</title>
 	</head>
 
 
@@ -38,22 +38,24 @@
 		<div class="video-container">
 			<video muted autoplay loop width="1280" height="720"> <source src="video.mp4" type="video/mp4">
 			</video>
-			<div class="layer-for-home"></div>
+				<div class="layer-for-services"></div>
 		</div>
 
 <!-- Content overlay on video bg -->
 		
-		<div class="overlay">
+		<div class="overlay-for-services">
 			<!-- <h2>Nancy Shi</h2> -->
-			<p>Hello and Welcome! You've come to the right place to learn Chinese.</p>
+			<h1>Services:</h1>
+			<h3>I can help you with</h3>
+				<ul>
+					<li>Child Tutoring</li>
+					<li>Adult Tutoring</li>
+					<li>Preparing for Exam or Project</li>
+					<li>Preparing for travel to China</li>
+					<li>Chinese Education in general!</li>
+				</ul>
 		</div>
-		<div class="button-container">
-			<div class="landing-buttons">
-				<button class="button"><a href="about.html">About</a></button>
-				<button class="button"><a href="services.html">Services</a></button>
-				<button class="button"><a href="contact.html">Contact</a></button>
-			</div>
-		</div>
+		
 		<div class="foot-container">
 			<footer class="footer">&copy; 2021 Nancy Shi</footer>
 		</div>
