--- a/about.html
+++ b/about.html
@@ -1,5 +1,3 @@
-<!-- TEST COMMENT VERSION 1-->
-
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
@@ -8,8 +6,9 @@
 		<link rel="stylesheet"
 		  href="https://fonts.googleapis.com/css?family=Sansita+Swashed">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
-		<title>Nancy Shi - Chinese/Mandarin Teacher</title>
+		<title>Nancy Shi - About</title>
 	</head>
+
 
 
 	<body>
@@ -31,29 +30,33 @@
 				</div>
 		</div>
 
-		
 
-<!--video background-->	
+		<!--video background-->	
 
 		<div class="video-container">
 			<video muted autoplay loop width="1280" height="720"> <source src="video.mp4" type="video/mp4">
 			</video>
-			<div class="layer-for-home"></div>
+			<!-- <div class="layer-for-about"></div> -->
 		</div>
 
 <!-- Content overlay on video bg -->
 		
-		<div class="overlay">
-			<!-- <h2>Nancy Shi</h2> -->
-			<p>Hello and Welcome! You've come to the right place to learn Chinese.</p>
+		<div class="overlay-for-about">
+			<h2>About</h2>
+			<img class="profile-pic" src="placeHolderPhoto.jpg">
+			<p>Chinese teacher with 10 years of experience. </p>
+
+			<p>Teaching experience from North County Chinese School, San Diego Chinese Academy, and San Dieguito Union Adult Education.</p>
+
+			<img class="logo" src="sdccaLogo.png">
+			<img class="logo" src="sdcaLogo.png">
+			<img class="logo" src="sduhsdLogo.jpg">
+
+			<p>Born and raised in China before moving to the United States. 
+			Other hobbies include hiking, exercise, and cooking with my family</p>
+
 		</div>
-		<div class="button-container">
-			<div class="landing-buttons">
-				<button class="button"><a href="about.html">About</a></button>
-				<button class="button"><a href="services.html">Services</a></button>
-				<button class="button"><a href="contact.html">Contact</a></button>
-			</div>
-		</div>
+		
 		<div class="foot-container">
 			<footer class="footer">&copy; 2021 Nancy Shi</footer>
 		</div>
