edited contact info for mom. Version 1.01 published

--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,8 @@
 			<!-- <h2>Nancy Shi</h2> -->
 			<h1>Contact</h1>
 			<ul>
-				<li>Email: </li>
-				<li>Phone: </li>
-				<li>wechat: </li>
+				<li>Email: shiqingsandiego@gmail.com</li>
+				<li>Phone: 858-342-3908 (text/call, please leave a message)</li>
 			</ul>
 
 		</div>
