--- a/home.html
+++ b/home.html
@@ -45,7 +45,8 @@
 		
 		<div class="overlay">
 			<!-- <h2>Nancy Shi</h2> -->
-			<p>Hello and Welcome! You've come to the right place to learn Chinese.</p>
+			<h1>Hello and Welcome! </h1>
+			<p>You've come to the right place to learn Chinese. Click "About" to begin.</p>
 		</div>
 		<div class="button-container">
 			<div class="landing-buttons">
